syntax = "proto3";

package hotel;

import "google/protobuf/empty.proto";

service ProtoHotelService {
    rpc GetHotelById (ProtoGetHotelByIdRequest) returns (ProtoHotel);
    rpc GetAllHotels (google.protobuf.Empty) returns (ProtoGetAllHotelsResponse);
    rpc AddHotel (ProtoAddHotelRequest) returns (ProtoHotel);
    rpc UpdateHotel (ProtoUpdateHotelRequest) returns (ProtoHotel);
    rpc DeleteHotel (ProtoDeleteHotelRequest) returns (google.protobuf.Empty);
}

message ProtoGetHotelByIdRequest {
    int64 id = 1;
}

message ProtoGetAllHotelsResponse {
    repeated ProtoHotel hotels = 1;
}

message ProtoAddHotelRequest {
    ProtoHotelRequest request = 1;
}

message ProtoUpdateHotelRequest {
    int64 id = 1;
    ProtoHotel hotel = 2;
}

message ProtoDeleteHotelRequest {
    int64 id = 1;
}

message ProtoHotel {
    int64 id = 1;
    int64 city_id = 2;
    string name = 3;
}

message ProtoHotelRequest {
    int64 city_id = 1;
    string name = 2;
}